# clover

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  clover.sln
Clover/: Client.cpp  Clover.sln  Clover.vcxproj  Clover.vcxproj.filters  TcpSocket.cpp
Clover/Clover/: Client.cpp  Client.h  Clover.vcxproj  Clover.vcxproj.filters  IClient.h  IServer.h  ITcpSocket.h  TcpSocket.cpp  TcpSocket.h  server.cpp  server.h
Clover/CloverTests/: ClientTest.cpp  CloverTests.cpp  CloverTests.vcxproj  CloverTests.vcxproj.filters  MockClient.h  MockIClient.h  MockIServer.h  MockITcpSocket.h  MockServer.h  ServerTest.cpp  TcpSocketTest.cpp  pch.h  test.cpp
Clover/GTest/: GTest.vcxproj  GTest.vcxproj.filters
Clover/src/audio/: SoundOuput.h  SoundOutput.cpp
Clover/src/core/: BaseComponent.cpp  BaseComponent.h  BaseEntity.cpp  Engine.cpp  Engine.h  EntityManager.cpp  ISystem.h
Clover/src/entity/: Entity.cpp
Clover/src/io/: InputManager.cpp  InputManager.h
Clover/src/messaging/: Message.cpp  NewPositionContent.cpp  NewPositionContent.h  TalkingContent.cpp  TalkingContent.h
Clover/src/network/: Client.h  IClientServer.h  IServer.h  ITcpSocket.h  Server.h  TcpSocket.cpp  TcpSocket.h
Clover/src/physic/: PositionComponent.cpp  Vector2D.cpp  Vector2D.h
Clover/src/state/: State.h  StateMachine.cpp  StateMachine.h
Clover/src/ui/: Pane.cpp  Pane.h  PaneBuffer.cpp  PaneBuffer.h
Clover/test/core/: BaseEntityTest.cpp
Clover/test/integration/: Main.cpp
Clover/test/messaging/: MessageTest.cpp  TalkingContentTest.cpp
Clover/test/network/: ClientTest.cpp  MockIClient.h  MockITcpSocket.h
Clover/test/physic/: PositionComponentTest.cpp  Vector2DTest.cpp
CloverTests/: ServerTest.cpp
include/: ChatClient.h  ChatServer.h  Client.h  ClientServer.h  IClient.h  IClientServer.h  IServer.h  ITcpSocket.h  Server.h  TcpSocket.h
src/: ChatClient.cpp  ChatServer.cpp  Client.cpp  ClientServer.cpp  Server.cpp  TcpSocket.cpp
src/core/: BaseComponent.h  BaseEntity.cpp  BaseEntity.h  Engine.cpp  Engine.h  EngineState.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  ISystem.h
src/entity/: Entity.h
src/math/: Vector2D.cpp  Vector2D.h
src/messaging/: Message.cpp  Message.h  MessageContent.cpp  MessageContent.h  MessageType.h
src/network/: Client.cpp  Client.h  ClientServer.cpp  ClientServer.h  IClient.h  Server.cpp  Server.h  TcpSocket.cpp  TcpSocket.h
src/physic/: PhysicSystem.cpp  PhysicSystem.h  PositionComponent.cpp  PositionComponent.h  Vector2D.cpp  Vector2D.h
src/state/: StateMachine.cpp
src/ui/: Pane.cpp  Pane.h
test/: ClientTest.cpp  MockIClient.h  MockIClientServer.h  MockIServer.h  MockITcpSocket.h  ServerTest.cpp
test/core/: BaseEntityTest.cpp  EngineTest.cpp  EntityManagerTest.cpp  MockBaseEntity.h
test/messaging/: NewPositionContentTest.cpp
test/network/: ClientTest.cpp  MockIClientServer.h  MockIServer.h  ServerTest.cpp
test/physic/: PhysicSystemTest.cpp  Vector2DTest.cpp
